<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hp.ramco.ProductDetailsPage">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_id10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_details"
                android:layout_centerHorizontal="true"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:textStyle="bold" />


            <!--<RadioButton-->
                <!--android:id="@+id/radioButton2"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="Pending"-->
                <!--android:layout_below="@+id/text_id10"-->
                <!--android:layout_marginTop="10dp"-->
                <!--android:textSize="20sp"-->
                <!--android:textColor="@android:color/black" />-->

            <EditText
                android:id="@+id/size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_id10"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:ems="17"
                android:inputType="numberDecimal"
                android:textColor="@android:color/black"
                android:hint="@string/size_of_cylinder" />

            <EditText
                android:id="@+id/area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/size"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:ems="17"
                android:inputType="numberDecimal"
                android:textColor="@android:color/black"
                android:hint="@string/area_of_cylinder" />

            <EditText
                android:id="@+id/typeOfPrinting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/area"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:layout_marginTop="10dp"
                android:ems="17"
                android:inputType="textPersonName"
                android:textColor="@android:color/black"
                android:hint="@string/type_of_printing" />

            <EditText
                android:id="@+id/mediaOfPrint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/typeOfPrinting"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:ems="17"
                android:inputType="textPersonName"
                android:textColor="@android:color/black"
                android:hint="@string/media_of_print" />

            <TextView
                android:id="@+id/text_id1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mediaOfPrint"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/technical_specification"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/width"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/text_id1"
                android:layout_marginTop="20dp"
                android:ems="17"
                android:inputType="numberDecimal"
                android:textColor="@android:color/black"
                android:hint="@string/width" />

            <EditText
                android:id="@+id/circumference"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/width"
                android:layout_marginTop="10dp"
                android:ems="17"
                android:inputType="numberDecimal"
                android:textColor="@android:color/black"
                android:hint="@string/circumference" />


            <EditText
                android:id="@+id/boreDiameter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/circumference"
                android:layout_marginTop="10dp"
                android:ems="17"
                android:inputType="numberDecimal"
                android:textColor="@android:color/black"
                android:hint="@string/bore_diameter" />

            <EditText
                android:id="@+id/keywaysize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/boreDiameter"
                android:layout_marginTop="10dp"
                android:ems="17"
                android:inputType="numberDecimal"
                android:textColor="@android:color/black"
                android:hint="@string/key_way_size" />

            <EditText
                android:id="@+id/flangeSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/keywaysize"
                android:layout_marginTop="10dp"
                android:ems="17"
                android:inputType="numberDecimal"
                android:textColor="@android:color/black"
                android:hint="@string/flange_size" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/flangeSize"
                android:id="@+id/ll"
                tools:ignore="ExtraText"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">


                <EditText
                    android:id="@+id/noOfColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"
                    android:digits=" abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ" android:layout_marginTop="10dp"
                    android:inputType="textPersonName"
                    android:textColor="@android:color/black"
                    android:hint="@string/color" />



                <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
                android:id="@+id/elegantButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                app:backGroundColor="@android:color/black"
                app:textColor="@android:color/white"
                app:textSize="15sp"/>

            </LinearLayout>
           <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/ll"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:background="@android:color/black"
                android:text="@string/place_order_button"
                android:textColor="@android:color/white"
                android:textStyle="bold"/>




        </RelativeLayout>
    </ScrollView>

</android.widget.RelativeLayout>
