<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hp.ramco.ServicesPage">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="serif"
                android:text="@string/services2"
                android:gravity="center"
                android:background="@android:color/black"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/heading"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/services"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/details1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/details"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="serif"
                android:text="@string/services1"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@android:color/holo_red_light"/>

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/details1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:background="@android:color/black"
                android:text="@string/place_order"
                android:onClick="PlaceAnOrder"
                android:textStyle="bold"
                android:textColor="@android:color/white"/>


        </RelativeLayout>
    </ScrollView>
</android.widget.RelativeLayout>
