<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hp.ramco.AboutUsPage">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/logo" />
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@+id/logo"
        android:background="#1c5103">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/getintouch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="GET IN TOUCH"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="40sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

        <ImageView
            android:id="@+id/gps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/getintouch"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            app:srcCompat="@drawable/gps" />

    <TextView
        android:id="@+id/officeAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gps"
        android:layout_marginTop="20dp"
        android:text="@string/office_address"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"/>

        <Button
            android:id="@+id/contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact"
            android:layout_below="@+id/officeAddress"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            android:background="#1c5103"
            android:textSize="20sp"
            android:textStyle="bold"/>


        <Button
            android:id="@+id/mobileno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mobile"
            android:layout_below="@+id/contact"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            android:background="#1c5103"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/emailid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mobileno"
            android:layout_centerHorizontal="true"
            android:text="@string/email1"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:textStyle="bold" />
    </RelativeLayout>
    </ScrollView>
</RelativeLayout>
