<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.example.hp.ramco.Thanking_Page">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView3">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/thankyou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/tick" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/thankyou"
        android:text="@string/order"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="40sp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description"
        android:layout_marginStart="30dp"
        android:layout_margin="40dp"
        android:text="@string/orderid"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"/>

            <!--<EditText-->
                <!--android:id="@+id/orderId"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_alignStart="@+id/return1"-->
                <!--android:layout_alignTop="@+id/order"-->
                <!--android:layout_marginStart="99dp"-->
                <!--android:ems="10"-->
                <!--android:inputType="number" />-->

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/description"
                android:layout_marginTop="40dp"
                android:layout_toEndOf="@+id/order"
                android:text="16"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="30sp"/>


            <TextView
        android:id="@+id/description1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_below="@+id/textView"
        android:textSize="20sp"
        android:text="@string/description1"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/holo_red_light"/>

            <Button
                android:id="@+id/return1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/description1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:text="Return to Home Page"
                android:textColor="@android:color/white"
                android:background="@android:color/black"
                android:textStyle="bold"
                android:textSize="15sp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:onClick="return1"/>



        </RelativeLayout>
    </ScrollView>




</RelativeLayout>
